--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -5,8 +5,10 @@
     <%= render partial: 'layouts/user_info',locals: { user: @user } %><br>
   </div>
 
+
 <!--メイン-->
   <div class="col-9">
+    
     <div class="d-flex justify-content-center">
       <div class="h5">
         <% if @type.present? %>
@@ -16,6 +18,7 @@
         <% end %>
       </div>
     </div>
+    
     <div class="d-flex justify-content-around mt-3 mb-5">
       <div>
         <%= link_to 'ALL',favorites_public_user_path(@current_user), class: 'btn btn-outline-info' %>
@@ -39,86 +42,11 @@
 
     <div>
       <% @favorite_posts.each do |post| %>
-        <div class="border border-info m-3 py-3 px-2">
-          <div class="d-flex bd-hightlight">
-            <div class="mr-auto bd-hightlight">
-              <%= link_to public_user_path(post.user.id), class: 'text-dark mr-auto bd-hightlight h5' do %>
-                <%= image_tag post.user.get_icon_image(30,30), class: 'border rounded-circle' %>
-                <span class="border-bottom border-dark"><%= post.user.nickname %></span>
-              <% end %>
-            </div>
-            <div class="bd-hightlight text-secondary"><%= post.created_at.strftime('%Y/%m/%d %H:%M') %></div>
-            <div class="bd-hightlight ml-3">
-              <% if post.achivement == "excellence" %>
-                <span><i class="fa-regular fa-face-laugh-squint fa-2x" style="color:#17a2b8"></i></span>
-              <% elsif post.achivement == "good" %>
-                <span><i class="fa-regular fa-face-smile fa-2x" style="color:#17a2b8"></i></span>
-              <% else %>
-                <span><i class="fa-regular fa-face-rolling-eyes fa-2x" style="color:#17a2b8"></i></span>
-              <% end %>
-            </div>
-          </div>
-
-          <div class="border border-secondary mt-2 mx-3 px-1">
-            <%= post.body %>
-          </div>
-
-          <div class="ml-4 text-info">
-            <% post.tags.each do |tag| %>
-              # <%= tag.name %>
-            <% end %>
-          </div>
-
-          <% if post.tomorrow_objective.present? %>
-            <div class="pl-2 mt-2">明日の目標</div>
-            <div class="border border-secondary mx-3 px-1">
-              <%= post.tomorrow_objective %>
-            </div>
-          <% end %>
-
-          <div class="d-flex bd-hightlight m-3">
-            <div class="bd-hightlight">
-              <% if post.favorited_by?(current_user) %>
-                <%= link_to public_favorite_path(post, post_id: post.id), method: :delete, class: 'btn btn-outline-danger' do %>
-                  <i class="fa-solid fa-thumbs-up fa-2x"></i>
-                    <%= post.favorites.where(type: 'nice').count %>
-                  <i class="fa-solid fa-heart fa-2x"></i>
-                    <%= post.favorites.where(type: 'like').count %>
-                  <i class="fa-solid fa-hand-fist fa-2x"></i>
-                    <%= post.favorites.where(type: 'fight').count %>
-                　  取り消す
-                <% end %>
-              <% else %>
-                <%= link_to public_favorite_path(post, post_id: post.id, button: 1), method: :post, class: 'btn btn-outline-primary' do %>
-                  <i class="fa-solid fa-thumbs-up fa-2x"></i> <%= Favorite.types_i18n[:nice] %>
-                  <%= post.favorites.where(type: 'nice').count %>
-                <% end %>
-            </div>
-            <div class="bd-hightlight">
-              <%= link_to public_favorite_path(post, post_id: post.id, button: 2), method: :post, class: 'btn btn-outline-primary ml-2' do %>
-                <i class="fa-solid fa-heart fa-2x"></i> <%= Favorite.types_i18n[:like] %>
-                <%= post.favorites.where(type: 'like').count %>
-              <% end %>
-            </div>
-            <div class="bd-hightlight">
-              <%= link_to public_favorite_path(post, post_id: post.id, button: 3), method: :post, class: 'btn btn-outline-primary ml-2' do %>
-                <i class="fa-solid fa-hand-fist fa-2x"></i> <%= Favorite.types_i18n[:fight] %>
-                <%= post.favorites.where(type: 'fight').count %>
-              <% end %>
-                <% end %>
-            </div>
-            <div class="border border-info ml-auto px-2 bd-hightlight d-flex align-items-center text-info">
-              合計 <%= post.favorites.count %>
-            </div>
-          </div>
-
-          <div class="d-flex justify-content-end">
-            <div class="text-secondary mt-2 mr-3">コメント件数：<%= post.post_comments.count %></div>
-            <div><%= link_to 'コメントする',public_post_path(post), class: 'btn btn-outline-secondary mr-3' %></div>
-          </div>
-        </div>
+        <%= render partial: 'layouts/post_partial/body',locals: { post: post, user: @user, current_user: @current_user }  %>
+        <%= render partial: 'layouts/post_partial/footline_go_to_show',locals: { post: post, user: @user, current_user: @current_user }  %>
       <% end %>
     </div>
+    
   </div>
 
 </div>
