--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,10 +105,13 @@
 
     <footer class="border-top pt-2">
       <div class="container">
-        <div class="row">
-          <div class="mx-auto">
-            <p>sensei!</p>
-          </div>
+        <div class="d-flex justify-content-center">
+          <% if user_signed_in? %>
+            <%= link_to 'お問い合わせフォーム',new_public_inquiry_path, class: 'text-info' %>
+          <% end %>
+        </div>
+        <div class="col-1 mx-auto">
+          <p>sensei!</p>
         </div>
       </div>
     </footer>
