--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -10,7 +10,7 @@
   <div class="d-felx flex-column  col-7">
     <div class="border border-info mb-4 p-4">
       こんにちは、<%= @current_user.nickname %>さん！<br>
-      今日の目標は「▲▲」です。<br>
+      今日はどんな一日になりましたか？<br>
       一日を振り返って、達成度を投稿しましょう！
     </div>
     <div class="border border-primary mt-4 p-4">
@@ -27,9 +27,7 @@
         <div class="bd-highlight ml-auto">
           <% if @goal.present? %>
             <span>
-              <!--<= form_with model: @goal, url: public_goal_path(@goal), method: :patch do |f| %>-->
-                <%= link_to '完了',public_goal_path(@goal), method: :patch, class: "btn btn-outline-danger" %>
-              <!--< end %>-->
+              <%= link_to '完了',public_goal_path(@goal), method: :patch, class: "btn btn-outline-danger" %>
             </span>
           <% end %>
         </div>
@@ -46,8 +44,12 @@
           <% end %>
         </div>
         <div class="bd-highlight ml-auto">
-          <span>振り返る</span>
-          <span>設定</span>
+          <% if @objective_month.present? %>
+            <span><%= link_to '振り返る',edit_public_objective_path(@objective_month), class: "btn btn-outline-success" %></span>
+          <% end %>
+          <% if @goal.present? %>
+            <span><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
+          <% end %>
         </div>
       </div>
       <div class="d-flex bd-highlight py-2">
@@ -62,8 +64,12 @@
           <% end %>
         </div>
         <div class="bd-highlight ml-auto">
-          <span>振り返る</span>
-          <span>設定</span>
+          <% if @objective_week.present? %>
+            <span><%= link_to '振り返る',edit_public_objective_path(@objective_week), class: "btn btn-outline-success" %></span>
+          <% end %>
+          <% if @goal.present? %>
+            <span><%= link_to '設定',new_public_objective_path, class: "btn btn-outline-info" %></span>
+          <% end %>
         </div>
       </div>
     </div>
