--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Topics#index</h1>
-<p>Find me in app/views/public/topics/index.html.erb</p>
+<div class="row">
+
+  <!--サイドバー-->
+  <div class="col-3 mb-5 border-right border-info">
+    <%= render partial: 'layouts/user_info',locals: { user: @user, goal: @goal } %><br>
+    <%= form_tag({controller:"topics",action:"index"}, method: :get) do %>
+      <%= render partial: 'layouts/tag_search' %>
+    <% end %>
+  </div>
+
+
+  <div class="col-9">
+    <div class="d-flex justify-content-center">
+      <div class="h5">新しいトピック</div>
+    </div>
+    <div class="d-flex justify-content-center border-top border-info">
+      <div class="h5 pt-3">すべてのトピック</div>
+    </div>
+    <div>
+      <% @topics.each do |topic| %>
+      <% end %>
+    </div>
+  </div>
+
+</div>
