--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -30,5 +30,8 @@
       </div>
     <% end %>
   </div>
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @posts %></div>
+    </div>
   </div>
 </div>
