--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -29,6 +29,11 @@
         <% end %>
       </div>
     <% end %>
+
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @topics %></div>
+    </div>
+
   </div>
 
 
