--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,5 +16,8 @@
         </div>
       <% end %>
     </div>
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @users %></div>
+    </div>
   </div>
 </div>
