--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -21,6 +21,11 @@
         <% end %>
       <% end %>
     </div>
+
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @posts %></div>
+    </div>
+
   </div>
 
 </div>
