--- a/app/views/public/topics/index.html.erb
+++ b/app/views/public/topics/index.html.erb
@@ -42,6 +42,10 @@
       <% end %>
     <% end %>
 
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @topics %></div>
+    </div>
+
   </div>
 
 </div>
