--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -19,6 +19,11 @@
         </div>
       <% end %>
     </div>
+
+    <div class="d-flex justify-content-center">
+      <div><%= paginate @users %></div>
+    </div>
+
   </div>
 
 </div>
